--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "brainfoolong/cryptojs-aes-php": "^2.1",
+        "web3p/ethereum-tx": "^0.4.1",
+        "minishlink/web-push": "^6.0",
+        "sc0vu/web3.php": "^0.1.4",
+        "yiisoft/yii2-httpclient": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
